syntax = "proto3";

package auth;

option go_package = "github.com/ArtyomArtamonov/msg/pkg/auth";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message TokenResponse {
    string access_token = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (TokenResponse);
}
